--- a/package.json
+++ b/package.json
@@ -4,6 +4,11 @@
     "ts-loader": "^9.4.2",
     "typescript": "^5.0.4",
     "webpack": "^5.79.0",
-    "webpack-cli": "^5.0.1"
+    "webpack-cli": "^5.0.1",
+    "webpack-dev-server": "^4.13.3"
+  },
+  "scripts": {
+    "build": "NODE_ENV=production webpack build",
+    "serve": "NODE_ENV=development webpack serve --host 127.0.0.1 --port 9123"
   }
 }
